# leetcode-py

./: .pre-commit-config.yaml  Pipfile  README.md  bfs.py  dfs.py  pyproject.toml  script.py  test.py
.circleci/: config.yml
.github/workflows/: test-on-push.yml
solutions/: solution_0125.py
solutions/solution_0001/: README.md  __init__.py  test_solution.py
solutions/solution_0002/: README.md  __init__.py  test_solution.py
solutions/solution_0003/: README.md  __init__.py  test_solution.py
solutions/solution_0005/: README.md  __init__.py  test_solution.py
solutions/solution_0007/: README.md  __init__.py  test_solution.py
solutions/solution_0009/: README.md  __init__.py  test_solution.py
solutions/solution_0011/: README.md  __init__.py  test_solution.py
solutions/solution_0013/: README.md  __init__.py  test_solution.py
solutions/solution_0014/: README.md  __init__.py  test_solution.py
solutions/solution_0015/: README.md  __init__.py  test_solution.py
solutions/solution_0017/: README.md  __init__.py
solutions/solution_0020/: README.md  __init__.py  test_solution.py
solutions/solution_0021/: README.md  __init__.py  test_solution.py
solutions/solution_0023/: README.md  __init__.py  test_solution.py
solutions/solution_0024/: README.md  __init__.py  test_solution.py
solutions/solution_0029/: README.md  __init__.py  test_solution.py
solutions/solution_003/: __init__.py
solutions/solution_0030/: README.md  __init__.py  test_solution.py
solutions/solution_0035/: README.md  __init__.py  test_solution.py
solutions/solution_0039/: README.md  __init__.py  test_solution.py
solutions/solution_0046/: README.md  __init__.py  test_solution.py
solutions/solution_0049/: README.md  __init__.py  test_solution.py
solutions/solution_0053/: README.md  __init__.py  test_solution.py
solutions/solution_0058/: README.md  __init__.py  test_solution.py
solutions/solution_0067/: README.md  __init__.py  test_solution.py
solutions/solution_0076/: README.md  __init__.py  test_solution.py
tests/: test_0001.py  test_0002.py  test_0003.py  test_0005.py  test_0007.py  test_0009.py  test_0013.py  test_0014.py  test_0015.py  test_0020.py  test_0021.py  test_0023.py  test_0024.py  test_0029.py  test_0035.py  test_0039.py  test_0046.py  test_0049.py  test_0053.py  test_0058.py  test_0067.py  test_0078.py  test_0092.py  test_0121.py  test_0125.py  test_0200.py  test_0206.py  test_0207.py  test_0225.py  test_0232.py  test_0234.py  test_0238.py  test_0316.py  test_0328.py  test_0332.py  test_0344.py  test_0347.py  test_0561.py  test_0641.py  test_0706.py  (+5 more)
(+131 files in other folders)
