[tool.poetry]
name = "leetcode-py"
version = "0.1.0"
description = "LeetCode with Python"
authors = ["Flynn <wphestiraid@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pycln = "^2.1.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
