[tool.poetry]
name = "leetcode-py"
version = "0.1.0"
description = "LeetCode with Python"
authors = ["Flynn <wphestiraid@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pycln = "^2.2.2"
pyupgrade = "^3.10.1"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
profile = "black"
